connection.js update

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "sql-employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No test specified\"",
     "start": "node server.js"
   },
   "author": "Rachel Hochman",
